# GameBoy_Builder

./: .cursorrules  .env.template  .gitignore  Cargo.toml  PRD.md  README.md
.cargo/: config.toml
.cursor/: AGENTS.md  README.md
data/: Component_List.xlsx  Lens_List.csv  Lens_Variants.csv  Screen_List.csv  Screen_Variants.csv  Shell_List.csv  Shell_Screen_Matrix.csv  Shell_Variants.csv
docs/: 3D_GUIDE.md  BACKEND_GUIDE.md  DATABASE_GUIDE.md  FRONTEND_GUIDE.md  api-contracts.md  architecture-backend.md  architecture-frontend.md  data-models.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
examples/: migrate_db.rs
frontend/: .gitignore  README.md  audit_model.js  audit_ui.js  components.json  index.html  mobile_test.js  package-lock.json  package.json  playwright.config.js  screenshot_test.js  selection_test.js  smoke_test.js  tailwind.config.js  test_runner_setup.js  tsconfig.json  vite.config.js
migrations/: 001_initial_schema.sql  002_seed_data.sql  003_harmonize_schema.sql  004_packs.sql  005_seed_packs.sql  006_fix_pack_names.sql  007_expert_mods.sql  008_seed_expert_mods.sql  009_auth_and_deck.sql  010_quote_submissions.sql  011_buttons.sql  012_seed_buttons.sql  013_refine_buttons_granularity.sql  014_fix_button_images.sql  015_add_oem_shell_images.sql  016_fix_oem_shell_paths.sql  017_fix_all_shell_paths.sql  018_unify_remaining_assets.sql  019_fix_assets_and_pngs.sql
scripts/: BUTTONS_DOWNLOAD_STATUS.md  README_download_buttons.md  aliexpress_page_debug.html  (+43 more)
(+156 files in other folders)
