[package]
name = "gameboy_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
# PostgreSQL - utilise rustls pour éviter windows-sys
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "tls-rustls"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs"] }
